# bibtex-utils

./: LICENSE  README.md  bibtex_utils.py  pyproject.toml
.github/workflows/: actions.yml
test/: test_bibtex_utils.py
test/resources/: main.tex  related.bib  section1.tex
